Makes sure m_showingByDefault is set to false when TextTrack.mode is set from JS. https://bugs.webkit.org/show_bug.cgi?id=79791

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/track/track-mode.html

* html/track/TextTrack.cpp:
(WebCore::TextTrack::setMode): setMode should always setShowingByDefault to false.

LayoutTests:

* media/track/track-mode-expected.txt: Added.
* media/track/track-mode.html: Added.


Canonical link: https://commits.webkit.org/100455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113110 268f45cc-cd09-0410-ab3c-d52691b4dbfc